[tool.poetry]
name = "PythonTemplate"
version = "0.1.0"
description = "A project template for python program"
authors = ["mixmoe"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
markdown2 = "^2.4.0"
imgkit = "^1.0.2"
uvicorn = "^0.13.3"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
