[tool.poetry]
name = "MarkdownRender"
version = "0.1.0"
description = "A microservice that provides the function of rendering Markdown as an image."
authors = ["mixmoe"]
license = "GPL v3"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
markdown2 = "^2.4.0"
imgkit = "^1.0.2"
uvicorn = "^0.13.3"
python-multipart = "^0.0.5"
httpx = "^0.18.2"
pydantic = {extras = ["dotenv"], version = "^1.7.3"}

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
